# time-sync-mcp

./: mcp-config.json  pyproject.toml  server.py
