[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "time-sync-mcp"
version = "1.0.0"
description = "Time Sync MCP Server - 提供时间相关工具"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "luo785859020", email = "785859020@qq.com" }
]
keywords = ["mcp", "time", "datetime"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
time-sync-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
